--- a/android/Dartify/app/src/main/res/layout/activity_profile.xml
+++ b/android/Dartify/app/src/main/res/layout/activity_profile.xml
@@ -58,6 +58,38 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineBH0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.01" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineBH1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.1" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineBV4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.98" />
+
+        <ImageButton
+            android:id="@+id/blockButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/block_button"
+            app:layout_constraintBottom_toTopOf="@id/guidelineBH1"
+            app:layout_constraintRight_toRightOf="@id/guidelineBV4"
+            app:layout_constraintTop_toTopOf="@id/guidelineBH0" />
+
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
