Ajustes de compra de membresía
MainActivity.java
- Mostrar anuncio cuando no hay una membresía activa (1) no mostrarlo cuando está activa (2)
- Obtener estatus de membresía del usuario (1 ó 2)
- Obtener fecha de vencimiento de membresía (si aplica)

StoreActivity.java
- Ajustes de textos en carrusel
- Implementación de funciones de tienda (mostrar precios de PlayStore, permitir al usuario comprar y registro de compra en servidor)

HomeFragment
- Filtro de personas a mostrar de acuerdo al tipo de membresía
- Cambio de layout de persona que se envía al adapter

PeopleAdapter.java
- Manejo de tipo de match
- Configurar el despliegue de la tarjeta del usuario por tipo de match (1 ó 2)

MatchCard.java
- Nuevo atributo Tipomatch

MatchCardDao.java
- Query para seleccionar los matches a mostrar de acuerdo al tipo de membresía que tiene el usuario

MatchDatabase.java
- Incremento de versión por el campo nuevo

MatchRepository.java
- Nuevo parámetro de tipo match

MatchCardViewModel.java
- Nuevo parámetro de tipo de match

GetMatchesTask.java
- Obtener el tipo de match desde el servidor y actualizarlo en la base de datos local

GetMatchInfoTask.java
- Obtener el tipo de match desde el servidor y actualizarlo en la base de datos local

MenuFragment.java
- Se agrega carrusel
- Ajustes para mostrar la tienda o la membresía que tiene el usuario (de acuerdo si es 1 ó 2)

layout_border_carrousel
- para agregar borde redondeado

layout_border_person1, layout_border_person2
- para mostrar un borde de color según el tipo de match

activity_store
- ajustes para mostrar la tienda

cardview_person3
- nuevo layout para indicar que el match es por membresia  = 2

fragment_menu
- ajustes de layout menu

storeitem_menu_layout
- layout de tarjeta de carrusel

--- a/android/Dartify/app/src/main/res/layout/activity_store.xml
+++ b/android/Dartify/app/src/main/res/layout/activity_store.xml
@@ -70,7 +70,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guidelineH2" />
+        app:layout_constraintTop_toTopOf="@id/guidelineH3" />
 
     <com.synnapps.carouselview.CarouselView
         android:id="@+id/carouselView"
@@ -85,7 +85,7 @@
         app:layout_constraintVertical_bias="1.0"
         app:pageColor="#00000000"
         app:radius="6dp"
-        app:slideInterval="3000"
+        app:slideInterval="4000"
         app:strokeColor="@color/white"
         app:strokeWidth="1dp" />
 
@@ -121,7 +121,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/guidelineH2"
+        app:layout_constraintBottom_toTopOf="@id/guidelineH3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@id/guidelineV0"
         app:layout_constraintTop_toBottomOf="@id/carouselView">
@@ -132,7 +132,7 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center_vertical"
             android:lines="2"
-            android:text="12"
+            android:text="1"
             android:textColor="#555"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -142,27 +142,37 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:lines="2"
-            android:text="meses"
+            android:text="mes"
             android:textColor="#555" />
 
         <TextView
+            android:id="@+id/tvprecio1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="-"
+            android:textAlignment="center"
+            android:textColor="#555" />
+
+        <Button
+            android:id="@+id/buttonComprar1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="$79.99 al mes"
-            android:textColor="#555" />
+            android:layout_marginTop="20dp"
+            android:background="@drawable/actionbutton"
+            android:text="Comprar"
+            android:textColor="@color/white" />
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/guidelineH2"
+        app:layout_constraintBottom_toTopOf="@id/guidelineH3"
         app:layout_constraintLeft_toLeftOf="@id/guidelineV0"
         app:layout_constraintRight_toRightOf="@id/guidelineV4"
         app:layout_constraintTop_toBottomOf="@id/carouselView">
-
 
         <TextView
             android:layout_width="wrap_content"
@@ -170,7 +180,7 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center_vertical"
             android:lines="2"
-            android:text="12"
+            android:text="3"
             android:textColor="#555"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -184,19 +194,30 @@
             android:textColor="#555" />
 
         <TextView
+            android:id="@+id/tvprecio2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="-"
+            android:textAlignment="center"
+            android:textColor="#555" />
+
+        <Button
+            android:id="@+id/buttonComprar2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="$79.99 al mes"
-            android:textColor="#555" />
+            android:layout_marginTop="20dp"
+            android:background="@drawable/actionbutton"
+            android:text="Comprar"
+            android:textColor="@color/white" />
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/guidelineH2"
+        app:layout_constraintBottom_toTopOf="@id/guidelineH3"
         app:layout_constraintLeft_toLeftOf="@id/guidelineV4"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/carouselView">
@@ -207,7 +228,7 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center_vertical"
             android:lines="2"
-            android:text="12"
+            android:text="6"
             android:textColor="#555"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -221,25 +242,27 @@
             android:textColor="#555" />
 
         <TextView
+            android:id="@+id/tvprecio3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="-"
+            android:textAlignment="center"
+            android:textColor="#555" />
+
+        <Button
+            android:id="@+id/buttonComprar3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="$79.99 al mes"
-            android:textColor="#555" />
+            android:layout_marginTop="20dp"
+            android:background="@drawable/actionbutton"
+            android:text="Comprar"
+            android:textColor="@color/white" />
     </LinearLayout>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/actionbutton"
-        android:text="Comprar"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guidelineH2" />
-
-    <Button
+        android:id="@+id/buttonCancelarCompra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="No, gracias"
